# Mesh

Mesh_client_nrf51822/project/: Mesh_client_nRF51822.uvoptx  Mesh_client_nRF51822.uvprojx
Mesh_client_nrf51822/source/Application/: main.c  nrf_mesh_config_app.h
Mesh_client_nrf52832/: CMakeCache.txt  CMakeLists.txt  README.md
Mesh_client_nrf52832/CMake/: FindSDK.cmake  Nrfjprog.cmake  nrfjprog.py
Mesh_client_nrf52832/CMake/sdk/: nRF5_SDK_15.2.0_9412b96.cmake
Mesh_client_nrf52832/Mesh_client_nrf52832.si4project/: Mesh_client_nrf52832.SearchResults  Mesh_client_nrf52832.sip_xad  Mesh_client_nrf52832.sip_xm  Mesh_client_nrf52832.sip_xsd  Mesh_client_nrf52832.siproj  Mesh_client_nrf52832.siwork
Mesh_client_nrf52832/project/: Mesh_client_nrf52832.uvoptx  Mesh_client_nrf52832.uvprojx
Mesh_client_nrf52832/source/: CMakeLists.txt
Mesh_client_nrf52832/source/Application/: CMakeLists.txt  common.h  main.c  main.h  nrf_mesh_sdk.c  platform.h  provisioner.h  sdk_config.h  simple_hal.c
Mesh_client_nrf52832/source/Application/inc/: Global_Typedef.h  app_freertos.h  common.h  main.h  nrf_mesh_config_app.h  nrf_mesh_config_examples.h  platform.h  sdk_config.h
Mesh_client_nrf52832/source/Application/src/: app_error_weak.c  app_freertos.c  main.c  simple_hal.c
Mesh_client_nrf52832/source/BSP/: CMakeLists.txt  bsp.c  bsp_cli.c  bsp_cli.h
Mesh_client_nrf52832/source/BSP/inc/: bsp.h  bsp_cli.h
Mesh_client_nrf52832/source/BSP/src/: bsp_cli.c
Mesh_client_nrf52832/source/Doc/: ReadMe.txt
Mesh_client_nrf52832/source/MiddleWare/: CMakeLists.txt
Mesh_client_nrf52832/source/MiddleWare/fprintf/: CMakeLists.txt
Mesh_client_nrf52832/source/MiddleWare/freertos/: CMakeLists.txt
Mesh_client_nrf52832/source/MiddleWare/freertos/config/: FreeRTOSConfig.h
Mesh_client_nrf52832/source/MiddleWare/freertos/source/: timers.c
Mesh_client_nrf52832/source/MiddleWare/freertos/source/include/: croutine.h  freertos_queue.h  semphr.h
Mesh_client_nrf52832/source/MiddleWare/freertos/source/portable/Common/: mpu_wrappers.c
Mesh_client_nrf52832/source/MiddleWare/micro-ecc/: CMakeLists.txt
Mesh_client_nrf52832/source/nRF5_SDK_for_52832/components/libraries/util/: app_error.c  app_error_weak.c
Mesh_client_nrf52832/source/nRF5_SDK_for_mesh/: CMakeLists.txt
Mesh_client_nrf52832/source/nRF5_SDK_for_mesh/mesh/: CMakeLists.txt
Mesh_client_nrf52832/source/nRF5_SDK_for_mesh/mesh/access/: CMakeLists.txt
Mesh_client_nrf52832/source/nRF5_SDK_for_mesh/mesh/bearer/: CMakeLists.txt
Mesh_client_nrf52832/source/nRF5_SDK_for_mesh/mesh/bootloader/: CMakeLists.txt
Mesh_client_nrf52832/source/nRF5_SDK_for_mesh/mesh/core/api/: nrf_mesh_config_core.h
Mesh_client_nrf52832/source/nrf5_SDK_for_Mesh/mesh/core/api/: nrf_mesh_config_core.h
Mesh_client_nrf52832/source/nrf5_SDK_for_Mesh/mesh/core/include/: log.h
Mesh_client_nrf52832/source/nrf5_SDK_for_Mesh/mesh/core/src/: log.c
Mesh_client_nrf52832_MDK/project/: mesh_client_nrf52832.uvoptx  mesh_client_nrf52832.uvprojx
Mesh_client_nrf52832_MDK/source/Application/inc/: app_freertos.h  app_mesh_implement.h  cli_cmd.h  nrf_mesh_config.h  nrf_mesh_config_app.h  platform.h  sdk_config.h
Mesh_client_nrf52832_MDK/source/Application/src/: app_freertos.c  app_mesh_implement.c  ble_softdevice_support.c  cli_cmd.c  main.c  mesh_provisionee.c
Mesh_client_nrf52832_MDK/source/BSP/inc/: boards.h  bsp.h
Mesh_client_nrf52832_MDK/source/BSP/src/: bsp.c
Mesh_client_nrf52832_MDK/source/Middllewares/freertos/config/: FreeRTOSConfig.h
Mesh_client_nrf52832_MDK/source/Middllewares/freertos/source/: freertos_list.c  freertos_queue.c
Mesh_service_nrf51822/project/: Mesh_service_nRF51822.uvoptx  Mesh_service_nRF51822.uvprojx
Mesh_service_nrf51822/source/Application/: common.h  main.c  nrf_mesh_sdk.c  nrf_mesh_sdk.h  platform.h  sdk_config.h  simple_hal.c
Mesh_service_nrf51822/source/BSP/: bsp.c  bsp.h  bsp_uart.c  bsp_uart.h
Mesh_service_nrf51822/source/Doc/: ReadMe.txt
STM32L443/MDK-ARM/: STM32L443.uvoptx  STM32L443.uvprojx
STM32L443/Source/Application/: FreeRTOSConfig.h  Global_Typedef.h  battery_manage.c  battery_manage.h  communication.c  communication.h  data_memory_manage.c  data_memory_manage.h  fatfs.c  fatfs.h  ffconf.h  freertos.c  immediately_measure.c  immediately_measure.h  main.c  main.h  moniter_template.c  moniter_template.h  platform.h  readMe.txt  stm32l4xx_hal_conf.h  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_TIM.c  stm32l4xx_it.c
STM32L443/Source/Bsp/: StoreManageFatfs.c  StoreManageFatfs.h  bsp.c  bsp.h  bsp_communication.c  bsp_communication.h  bsp_rtc.c  bsp_rtc.h  bsp_uart.c  bsp_uart.h  ymodem.c  ymodem.h
STM32L443/Source/Drivers/: afe4403.c  afe4403.h  bma250e.c  bma250e.h  bma2x2.c  bma2x2.h  led.c  led.h  mx25l06e.c  mx25l06e.h  spi.c  spi.h
STM32L443/Source/Middlewares/CloudCare/Arithmetic/: IIR_Filter_Paramter.h  RevRecord.txt  cc_alg.h  (+30 more)
STM32L443/Source/Shell/: fatfs_shell.c  rtc_shell.c  shell.c  shell.h
(+12 files in other folders)
